# calculator

./: .gitignore  CMakeLists.txt  README.md  calculator.sln
calculator/: Source.c  Source.cpp  answers.txt  calculator.vcxproj  calculator.vcxproj.filters  input.txt  main.c  output.txt  stack.c  stack.h
data/: input.txt  output.txt
src/: main.c  stack.c
